# contextual-rag-local

./: .gitignore  README.md  app.py  config.py  local_zero_cost_guide.md  pyproject.toml  temp_file
src/: __init__.py  context_generator.py  document_processor.py  llm_interface.py  retrieval.py  vector_db.py
